# noteFlip

./: .gitignore  CMakeLists.txt  README.md  configure.sh  decks.txt  make.sh  plan  run.sh  share.sh
.cache/clangd/index/: card.cpp.BA12D050E7182CDC.idx  card.hpp.9DCAF35900BF6B92.idx  deck.cpp.C36F0EF1D1E66F98.idx  deck.hpp.49A99844B94A285D.idx  file.cpp.D9AB3A4A6FA849C7.idx  file.hpp.E08DDAF5DB77F2DB.idx  main.cpp.85E2E224B01AF6A9.idx  phase.cpp.B12AF192B7C6DCB5.idx  phase.hpp.BB82C794206B4935.idx  print.cpp.6B404F9B4CB36C2B.idx  print.hpp.E26720F168074EB4.idx
card/amogus/: blue.txt  impostor.txt  pink.txt  red.txt
deck/: amogus.txt  pika.txt
src/: file.cpp  main.cpp  phase.cpp  print.cpp
src/attempt1/: main.cpp  phase.cpp
src/attempt1/include/: phase.hpp  print.hpp
src/include/: file.hpp  phase.hpp
